# pymath

./: LISENCES.mit  README.md  __init__.py  myproject.toml  pymath.py  pyproject.toml  setup.cfg  setup.py
.gitHub/workflows/: workflow.yml
pymath/: __init__.py
src/mathpy/: __init__.py  mathpy.py  module.py
