[metadata]
name = mathpy
version = 2025.09.13
url = https://github.com/Ian-and-code/mathpy
author = David Beazley
author_email = "David Beazley" <dave@dabeaz.com>
description = "PLY - Sly Lex Yacc"
long_description = "PLY is an implementation of lex and yacc. No longer maintained on PyPI. Latest version on GitHub."
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src

packages = mathpy
